pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
      - containerPort: 80
    volumeMounts:
      - name: task-pv-storage
        mountPath: "/usr/share/nginx/html"
