ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-kubernetes.mycompany.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes
          # connect to service using http port
          servicePort: 80
        # default path put here explicitly for illustrative purposes
        path: /
